# site2md

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: pipeline-architecture.py  pipeline-research.md
site2md/: config.py  main.py  mcp_server.py
site2md/api/: routes.py
site2md/core/: error_handlers.py  logging.py  metrics.py  problem_detail.py  redis.py  security.py
site2md/domain/: models.py  ports.py
site2md/models/: schemas.py
site2md/pipeline/: core.py
site2md/pipeline/stages/: assemble.py  convert.py  dedup.py  extract.py  postprocess.py  preclean.py
site2md/services/: crawl_service.py  storage_service.py
site2md/storage/: filesystem.py
site2md/worker/: cleanup.py  settings.py  tasks.py
tests/: conftest.py  test_api.py  test_pipeline.py
